tests/NormalTests/paczka1/fuzzy1/49047706.err
Error in line 10: slq78O A468 2],]
Error in line 7: A468 S639 34,4
Error in line 14: IKCT5ytnr9 S722 4,0
Error in line 22: IKCT5ytnr9 A21 20,33
Error in line 21: IKCT5ytnr9 A21 49,5
Error in line 13: A468 A468 68,8
Error in line 35: DHKWqsDUh A21 37,5
